fix: adjust width and alignment in ScheduleDate and ScheduleView styles for better layout

--- a/Styles/componentStyles/home/ScheduleDate.module.scss
+++ b/Styles/componentStyles/home/ScheduleDate.module.scss
@@ -1,6 +1,6 @@
 .DateWrap {
     border: solid 1px #7bc3ff;
-    width: 59px;
+    width: 65px;
     height: 78px;
     border-radius: 6px;
     text-align: center;
