--- a/Styles/componentStyles/home/ScheduleView.module.scss
+++ b/Styles/componentStyles/home/ScheduleView.module.scss
@@ -1,7 +1,7 @@
 .ScheduleWrap {
     font-weight: bold;
     display: flex;
-    width: 100%;
+    flex: 1;
     .ContentsWrap {
         display: flex;
         box-shadow: 0 1px 2px 0 rgb(0, 0, 0, 0.25);
@@ -9,13 +9,14 @@
         border-radius: 6px;
         background: #fff;
         width: 100%;
+        position: relative;
         .ScheduleContents {
             padding: 0 0 0 17px;
             height: 78px;
             display: flex;
             flex-direction: column;
-            align-items: left;
-            width: 260px;
+            align-items: flex-start;
+            width: 100%;
             justify-content: space-evenly;
             h3 {
                 font-size: 1.8rem;
@@ -31,6 +32,11 @@
         }
 
         .BiChevronRight {
+            position: absolute;
+            z-index: 1;
+            right: 10%;
+            top: 50%;
+            transform: translateY(-50%);
             padding-left: 10px;
             display: flex;
             flex-direction: column;
